# Health_Robot

./: .gitignore  AGENTS.md  README.md  camera_stream.py
.github/workflows/: cd.yml  docker.yml
Docs/: CDC-technique.md  CONTEXT_MISSION.md  MVP.md  PROJECT_MAP.md  ROBOT_ROSBRIDGE_MQTT.md  Rapport des Retards.md
Docs/health_robots_api/: get_test.yml  opencollection.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260614_0001_create_users.py  20260614_0002_add_user_timestamps.py  20260615_0003_create_robot_settings.py  20260619_0004_create_mission_control_tables.py
backend/app/: main.py
backend/app/application/dto/: admin_user_dto.py  auth_dto.py  map_dto.py  mission_dto.py  robot_command_dto.py  robot_dto.py  robot_media_dto.py  settings_dto.py
backend/app/application/use_cases/: authenticate_user.py  clear_emergency.py  container.py  create_user.py  deactivate_user.py  get_authenticated_user.py  get_robot_status.py  get_settings.py  handle_mqtt_message.py  list_users.py  mission_orchestrator.py  process_battery_telemetry.py  process_emergency_telemetry.py  process_navigation_eta.py  process_robot_status_telemetry.py  reset_user_password.py  robot_command_errors.py  send_robot_command.py  settings_errors.py  trigger_emergency_stop.py  update_settings.py  update_user.py  user_management_errors.py
backend/app/core/: config.py
backend/app/domain/entities/: mission.py  mqtt_topics.py  robot.py  robot_command.py  settings.py  user.py
backend/app/domain/repositories/: annotated_point_repository.py  message_publisher.py  mission_repository.py  robot_command_publisher.py  robot_state_repository.py  settings_repository.py  user_repository.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/database/models/: __init__.py  mission_model.py  settings_model.py  user_model.py
backend/app/infrastructure/mqtt/: client.py  robot_command_publisher.py
backend/app/infrastructure/repositories/: in_memory_mission_repository.py  in_memory_robot_state_repository.py  in_memory_settings_repository.py  in_memory_user_repository.py  sqlalchemy_mission_repository.py  sqlalchemy_settings_repository.py  sqlalchemy_user_repository.py
backend/app/infrastructure/robot_maps/: dashboard_client.py
backend/app/infrastructure/rosbridge/: mqtt_rosbridge_bridge.py
backend/app/infrastructure/security/: jwt_token_service.py  password_hasher.py
backend/app/models/: events.py
backend/app/mqtt/: client.py  topics.py
backend/app/presentation/api/: dependencies.py  health.py
backend/app/presentation/api/v1/: router.py
backend/app/presentation/api/v1/endpoints/: admin_settings.py  admin_users.py  annotated_points.py  auth.py  missions.py  navigation.py  robot.py  robot_commands.py  robot_maps.py  robot_media.py  robot_screen.py  safety.py
backend/app/routes/: navigation.py  robot.py  safety.py
backend/app/services/: navigation_eta_service.py  safety_service.py
backend/app/state/: robot_state.py
backend/tests/: conftest.py  helpers.py  test_admin_settings_endpoints.py  test_admin_user_endpoints.py  test_auth.py  test_auth_endpoints.py  test_mission_control_endpoints.py  test_mqtt_rosbridge_bridge.py  test_public_robot_ingestion.py  test_robot_command_endpoints.py  test_robot_map_endpoints.py  test_robot_media_endpoints.py  test_robot_permissions.py
docs/: mission-control-implementation-plan.md  mission-control-simple-plan.md
docs/adr/: 0001-embed-foxglove-in-control.md
frontend/: Dockerfile
frontend/carebot-control/: package-lock.json  package.json  pnpm-lock.yaml
frontend/frontend_v1/: replit.md
frontend/health-robot-front/: .cta.json  package-lock.json  package.json  tailwind.config.ts
infra/: .env.example  docker-compose.yml  fetch_map.sh  start_demo.sh  start_robot.sh
infra/map/: yahboom_map.pgm  yahboom_map.yaml
infra/terraform/: .gitignore  main.tf
m3pro_teacher_ws/: COURS_NAV2_DECOUVERTE.md  EXO.md  EXO_NAV2.md  EXO_SLAM_NAV_BRAS.md  ROS2_CE_QUIL_FAUT_SAVOIR.md  SNIPPETS_DEMOS.md  SNIPPETS_NAV.md  SNIPPETS_VISION.md  SNIPPETS_WEB.md  TUTORIEL_VNC_ET_DEPLOIEMENT.md  TUTO_DISCOVERY.md
m3pro_teacher_ws/scripts/: deploy_workspace_to_robot.sh  install_microros_service.sh  (+6 more)
m3pro_teacher_ws/src/m3pro_teacher_demos/: package.xml
m3pro_teacher_ws/src/m3pro_teacher_demos/m3pro_teacher_demos/: __init__.py  arm_joint_state_bridge_demo.py  frontier_explorer_demo.py  sensor_fusion_rgb_demo.py  tf2_sensor_frames_demo.py
m3pro_teacher_ws/src/m3pro_teacher_nav/: CMakeLists.txt  package.xml
m3pro_teacher_ws/src/m3pro_teacher_nav/config/: explore_params.yaml  nav2_params.yaml  slam_toolbox_params.yaml
m3pro_teacher_ws/src/m3pro_teacher_nav/launch/: explore.launch.py  navigation.launch.py  slam_and_nav.launch.py
m3pro_teacher_ws/src/m3pro_teacher_nav/rviz/: nav2_view.rviz
m3pro_teacher_ws/src/m3pro_teacher_web/: package.xml
m3pro_teacher_ws/src/m3pro_teacher_web/launch/: web_dashboard.launch.py
m3pro_teacher_ws/src/m3pro_teacher_web/m3pro_teacher_web/: web_server_node.py
m3pro_teacher_ws/src/m3pro_teacher_web/web/: index.html
robot/: .gitignore  Dockerfile  README.md  entrypoint.sh
robot/src/health_robot_bridge/: README.md  package.xml  setup.cfg  setup.py
robot/src/health_robot_bridge/health_robot_bridge/: mqtt_ros_bridge_node.py  payloads.py
robot/src/m3pro_teacher_description/: CMakeLists.txt  package.xml
robot/src/m3pro_teacher_vision/: package.xml
robot/src/m3pro_teacher_watchdog/: package.xml  setup.py
robot/src/m3pro_teacher_watchdog/m3pro_teacher_watchdog/: watchdog_node.py
robot/src/mission_recovery/: package.xml  setup.py
robot/src/mission_recovery/mission_recovery/: mission_recovery_node.py
robot/src/navigation/: package.xml  setup.py
robot/src/navigation/navigation/: navigation_node.py
robot/src/obstacle_avoidance/: package.xml  setup.py
robot/src/obstacle_avoidance/obstacle_avoidance/: obstacle_avoidance_node.py
robot/src/vision/: package.xml  setup.py
robot/src/vision/vision/: vision_node.py
(+167 files in other folders)
