[project]
name = "backend"
version = "0.1.0"
description = "Health Robot backend API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
    "sqlalchemy",
    "alembic",
    "pymysql",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "bcrypt<4.1",
    "pydantic[email]",
]
[dependency-groups]
dev = [
    "pytest",
    "httpx",
]
[tool.fastapi]
entrypoint = "app.main:app"
