<?xml version="1.0"?>
<package format="3">
  <name>m3pro_teacher_nav</name>
  <version>0.1.0</version>
  <description>SLAM and Nav2 configuration for Yahboom ROSMASTER M3 Pro</description>
  <maintainer email="teacher@example.com">Teacher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>navigation2</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>m3pro_teacher_description</exec_depend>
  <exec_depend>m3pro_teacher_demos</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
