<?xml version="1.0"?>
<package format="3">
  <name>m3pro_teacher_web</name>
  <version>0.1.0</version>
  <description>Simple web dashboard for monitoring the Yahboom M3 Pro robot</description>
  <maintainer email="teacher@example.com">Teacher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rosbridge_server</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
