<?xml version="1.0"?>
<package format="3">
  <name>m3pro_teacher_description</name>
  <version>0.1.0</version>
  <description>Teaching URDF, RViz, and frame description for Yahboom ROSMASTER M3 Pro.</description>
  <maintainer email="teacher@example.com">Teacher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

