<?xml version="1.0"?>
<package format="3">
  <name>m3pro_teacher_vision</name>
  <version>0.1.0</version>
  <description>Object detection and pick-and-place for Yahboom M3 Pro</description>
  <maintainer email="teacher@example.com">Teacher</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
