<?xml version="1.0"?>
<package format="3">
  <name>mission_recovery</name>
  <version>0.1.0</version>
  <description>Recuperation autonome de la fourniture au point de stock — scan (object_detector) + saisie au bras M3 Pro, ferme la boucle de mission</description>
  <maintainer email="danielkomoe78@gmail.com">Daniel Komoe</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
