<?xml version="1.0"?>
<package format="3">
  <name>navigation</name>
  <version>0.1.0</version>
  <description>Autonomous navigation node for Health Robot using Nav2</description>
  <maintainer email="danielkomoe78@gmail.com">Daniel Komoe</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>action_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
