<?xml version="1.0"?>
<package format="3">
  <name>obstacle_avoidance</name>
  <version>0.1.0</version>
  <description>Obstacle avoidance node for Health Robot using Lidar</description>
  <maintainer email="danielkomoe78@gmail.com">Daniel Komoe</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
